# nono-py

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-nono.yml  ci.yml  publish.yml  release.yml
docs/: docs.json
docs/python/: examples.mdx  installation.mdx  overview.mdx  quickstart.mdx
docs/python/api/: access-mode.mdx  audit.mdx  capability-set.mdx  capability-source.mdx  fs-capability.mdx  functions.mdx  policy.mdx  query-context.mdx  sandbox-state.mdx  support-info.mdx
docs/specs/: proxy-and-undo-bindings.md
examples/: 01_basic_sandbox.py  02_query_permissions.py  03_sandbox_state.py  04_capability_inspection.py  05_subprocess_sandbox.py  06_command_filtering.py  07_error_handling.py  08_sandboxed_exec.py  09_policy_loading.py  10_policy_enforced.py  11_proxy_basics.py  14_audit_to_s3.py  14b_audit_to_s3.py  README.md  policy_example.json
python/nono_py/: __init__.py  _nono_py.pyi  audit.py
src/: lib.rs  policy.rs  proxy.rs  sandboxed_exec.rs  undo.rs
tests/: conftest.py  test_access_mode.py  test_audit.py  test_capability_set.py  test_integration_audit.py  test_integration_exec.py  test_integration_snapshot.py  test_policy.py  test_proxy_only.py  test_query.py  test_sandbox_state.py  test_sandboxed_exec.py  test_smoke.py  test_support.py
